--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ consul_exporter_version: 0.7.1
 consul_exporter_web_listen_address: 0.0.0.0
 consul_exporter_web_listen_port: 9107
 consul_exporter_log_level: warn
-consul_exporter_log_format: "logger:stdout?json=true"
+consul_exporter_log_format: "json"
 consul_exporter_allow_firewall: false
 consul_exporter_binary_install_dir: /usr/local/bin
 consul_exporter_system_user: "{{ prometheus_user | default('prometheus') }}"
